# indiaquant-mcp

./: README.md  claude_desktop_config.json  pyproject.toml  requirements.txt  server.py
src/: __init__.py
src/modules/: market_data.py  options_engine.py  portfolio_manager.py  signal_generator.py
src/tools/: market_data_tool.py  options_tool.py  portfolio_tool.py  signal_tool.py
tests/: test_core.py
